# pipeline-rag-langchain

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  run_app.py
.streamlit/: config.toml
notebooks/: pipeline_rag_langchain.ipynb
src/app/: __init__.py  app.py
